[project]
name = "kwork-hunter-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.20.0.post0",
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "cryptography>=45.0.5",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]
